tests/macros/expand/filter_async.stderr
error: option `filter_async` does not exist for kind `expand`
 --> $DIR/filter_async.rs:2:52
  |
2 |     let q = inquisition::questions![Expand { async filter: todo!() }];
  |                                                    ^^^^^^
