tests/macros/expand/filter_async.rs
fn main() {
    let q = inquisition::questions![Expand { async filter: todo!() }];
}
